--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "apache-arrow": "^14.0.1",
+    "cbor-redux": "^1.0.0",
     "danfojs": "^1.1.2",
-    "fp-ts": "^2.16.1"
+    "fp-ts": "^2.16.1",
+    "pino": "^8.16.2",
+    "rxjs": "^7.8.1",
+    "ws": "^8.15.0"
   },
   "devDependencies": {
     "@apache-arrow/ts": "^14.0.1",
+    "@types/ws": "^8.5.10",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.4",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
